# vembrane

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  Types.md  consequences.txt  definitions.yaml  header.txt  main.py  pyproject.toml  remove_unused_info.py  test.bcf  test.sqlite  to_remove.txt
.github/: release-drafter-template.yml
.github/workflows/: main.yml  pypi.yml  release-please.yml  release_drafter.yml  update-sequence-ontology.yml
docs/: ann_types.md  annotate.md  develop.md  fhir.md  filter.md  sort.md  structured.md  table.md  tag.md
tests/: expression.txt  test.vcf  test_varfilter.py  test_vembrane.py
tests/resources/: context.py  context_error.py
tests/testcases/annotate/test_example/: annotation.tsv  annotation.yaml  config.yaml  expected.vcf  test.vcf
tests/testcases/fhir/test_01/: config.yaml  expected.yaml  test.vcf
tests/testcases/filter/test_alt_allele_multiple_access/: config.yaml  expected.vcf
tests/testcases/filter/test_ann_consequence_comparison/: config.yaml
tests/testcases/filter/test_ann_csq_intron/: test.vcf
tests/testcases/filter/test_ann_impact/: expected.vcf  test.vcf
tests/testcases/filter/test_ann_string_eq_conjunction_disjunction/: config.yaml
tests/testcases/filter/test_auxiliary_gene_set/: config.yaml
tests/testcases/filter/test_breakend_missing_mateid/: test.vcf
tests/testcases/filter/test_by_sample_id/: config.yaml
tests/testcases/filter/test_context/: config.yaml
tests/testcases/filter/test_csq_with_ann_expression/: config.yaml
tests/testcases/filter/test_default_ontology/: config.yaml  expected.vcf  test.vcf
tests/testcases/filter/test_end_property_small_variant/: test.vcf
tests/testcases/filter_ann_alphamissense/: config.yaml  expected.vcf
tests/testcases/filter_ann_spliceai/: config.yaml  expected.vcf  test.vcf
tests/testcases/filter_breakend_mateid_one_item_encoding/: config.yaml  expected.vcf
tests/testcases/table_ann_exon_range/: expected.tsv  test.vcf
tests/testcases/table_ann_exon_range_NA/: expected.tsv
tests/testcases/table_ann_exon_range_undefined/: config.yaml  expected.tsv
tests/testcases/table_default_get/: expected.tsv  test.vcf
tests/testcases/table_for_each_sample_test/: expected.tsv
tests/testcases/table_issue_171/: config.yaml  expected.tsv  test.vcf
tests/testcases/table_sample_list_comprehension_test/: expected.tsv
tests/testcases/table_sample_long/: config.yaml  expected.tsv  test.vcf
tests/testcases/table_sample_long_header/: config.yaml  expected.tsv
tests/testcases/table_separator_test/: config.yaml
tests/testcases/test01/: config.yaml  expected.vcf
tests/testcases/test02/: config.yaml  test.vcf
tests/testcases/test03/: config.yaml  expected.vcf
tests/testcases/test04/: config.yaml  expected.vcf
tests/testcases/test05/: config.yaml  expected.vcf
tests/testcases/test06/: config.yaml
tests/testcases/test07/: config.yaml  expected.vcf
tests/testcases/test08/: config.yaml
tests/testcases/test09/: config.yaml  expected.vcf
tests/testcases/test10/: config.yaml  expected.vcf
tests/testcases/test11/: config.yaml  expected.vcf
tests/testcases/test12/: config.yaml  expected.tsv
tests/testcases/test13/: config.yaml  expected.vcf  test.vcf
tests/testcases/test14/: config.yaml  test.vcf
tests/testcases/test15/: config.yaml  expected.vcf  test.vcf
tests/testcases/test16/: config.yaml  expected.tsv
tests/testcases/test17/: config.yaml
tests/testcases/test18/: config.yaml  expected.vcf
tests/testcases/test19/: test.vcf
tests/testcases/test20/: config.yaml  expected.vcf
tests/testcases/test22/: expected.tsv
tests/testcases/test_alt_allele_multiple_access/: test.vcf
tests/testcases/test_ast/: expected.tsv
tests/testcases/test_auxiliary_gene_set/: config.yaml
tests/testcases/test_breakend_constellations/: expected.vcf  test.vcf
tests/testcases/test_breakend_constellations_preserve_order/: expected.vcf  test.vcf
tests/testcases/test_breakend_missing_mateid/: config.yaml  expected.vcf
tests/testcases/test_custom_count_functions_diploid/: expected.vcf  test.vcf
tests/testcases/test_custom_count_functions_triploid/: expected.vcf
tests/testcases/test_filter_FILTER/: expected.tsv
tests/testcases/test_filter_ann_csq_intron/: config.yaml  expected.vcf
tests/testcases/test_filter_end/: config.yaml  expected.vcf  test.vcf
tests/testcases/test_filter_end_breakend/: config.yaml  expected.vcf  test.vcf
tests/testcases/test_filter_end_small_variant/: config.yaml  expected.vcf
tests/testcases/test_filter_missing_ann/: expected.vcf
tests/testcases/test_filter_single_int/: test.vcf
tests/testcases/test_flag/: expected.vcf  test.vcf
tests/testcases/test_float32/: expected.vcf
tests/testcases/test_malformed_ann/: config.yaml
tests/testcases/test_mate_pairs_preserve_order/: expected.vcf
tests/testcases/test_overwrite_wrong_number/: config.yaml
tests/testcases/test_preserve_order/: config.yaml  expected.vcf
tests/testcases/test_replace_na/: config.yaml
tests/testcases/test_statistics/: config.yaml  test.vcf
tests/testcases/test_table_aux/: genes.txt  test.vcf
tests/testcases/test_table_missing_ann/: test.vcf
tests/testcases/test_tag_invalid_tag/: config.yaml
tests/testcases/test_tag_polyphen_sift/: config.yaml
tests/testcases/test_tag_tagmode_fail/: expected.vcf
tests/testcases/test_without_na/: config.yaml  expected.vcf  test.vcf
varfilter/: __init__.py
vembrane/: __init__.py  ann_types.py  arrow.py  aux.py  classes.py  cli.py  common.py  errors.py  globals.py  globals_whitelist.py  representations.py  sequence_ontology.py
vembrane.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vembrane/backend/: backend_cyvcf2.py  backend_pysam.py  base.py  pysam.py
vembrane/modules/: annotate.py  database.py  fhir.py  filter.py  sort.py  structured.py  table.py  table_all.py  tablelize.py  tag.py
vembrane/resources/: sequence_ontology.2024-06-06.obo.xz  sequence_ontology.2025-09-10.obo.xz
(+142 files in other folders)
