[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "vembrane"
version = "2.0.0"
description = "Filter VCF/BCF files with Python expressions."
authors = ["Till Hartmann", "Christopher Schröder", "Johannes Köster", "Jan Forster", "Marcel Bargull", "Felix Mölder", "Elias Kuthe", "David Lähnemann"]
readme = "README.md"
homepage = "https://github.com/vembrane/vembrane"
repository = "https://github.com/vembrane/vembrane"

[tool.poetry.scripts]
vembrane = 'vembrane.cli:main'

[tool.poetry.dependencies]
python = ">=3.12"
pysam = "^0.22.1"
cyvcf2 = "^0.31.1"
pyyaml = "^6.0.2"
asttokens = "^2.4.1"
numpy = { version = "^2.0.1", python = ">=3.10" }
intervaltree = "^3.1.0"
yte = "^1.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
pytest = "^8.3.2"
pre-commit = "^3.8.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "COM", "I"]
exclude = ["D"]
ignore = ["COM812"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
